add(socket):tried socket io to send txt files realtime
